# Dogbot

./: .gitignore  LICENSE.txt  README.md
CAD/: README.md
CAD/Body/: BatteryMount.FCStd  BatteryMountV2.FCStd  BatteryMountV3.FCStd  BodyBracketA.FCStd  CableClamp.FCStd  DriveMountStandoff.FCStd  LegSpacer.fcstd  MotorDriverMount.FCStd  MotorDriverMountB.FCStd  Plate_001.fcstd  PoweBarLid.FCStd  PowerBar.FCStd  Spacer.FCStd
CAD/Experiments/: MotorSensorTest.FCStd  TestOuterRace.FCStd  TestRace.FCStd
CAD/Leg/: DriveLink.FCStd  DriveLinkB-15mm.FCStd  DriveLinkV2-15mm.FCStd  DriveLinkV2B-15mm.FCStd  DriveLink_15mm.FCStd  Foot.FCStd  KneeBearingCage.FCStd  KneePushRodMount.FCStd  LegMount.FCStd  LegMountV2-15_5mm.FCStd  LegMountV2-15mm.FCStd  LegMountV2.FCStd  LegMovementSim.FCStd  LegSpacer.fcstd  LowerKnee.FCStd  LowerKneeRace.FCStd  LowerKneeRaceV2.FCStd  LowerKneeRaceV3.FCStd  LowerKneeRaceV4.FCStd  LowerKneeV2.FCStd  LowerKneeV3.FCStd  Pad.fcstd  PushRodTail.FCStd  PushRodTailB.FCStd  PushRodTailB_short.FCStd  PushRodTail_Short.FCStd  UpperKnee3-15mm-Hex.FCStd  UpperKnee3-15mm.FCStd  UpperKnee3.FCStd  UpperKnee3B-15_5mm.FCStd  UpperKnee3B-15mm.FCStd  UpperKnee3B.FCStd  UpperKnee4-15_5mm.FCStd  UpperKnee4-15mm.FCStd
CAD/Servo/: BearingCage6_43.FCStd  BearingRace.FCStd  CapacitorConnectionCover.FCStd  CarrierA.FCStd  CarrierAV2.FCStd  CarrierAV2_old.FCStd  CarrierB.FCStd  CarrierC.FCStd  CarrierV2.FCStd  CarrierV3.FCStd  EndStopSensorMount.FCStd  MotorAdaptor.FCStd  MotorAdaptorV2.FCStd  MotorAdaptorV2wide.FCStd  MotorAdaptorV2wide_long.FCStd  MotorHall3SensorMount.FCStd  MotorHall3SensorMountPCB.FCStd  MotorHall3SensorMountPD5060.FCStd  MotorHall3SensorMountV2.FCStd  MotorHall3SensorMountV3.FCStd  MotorMount5010.FCStd  MotorMountMT5208.FCStd  MotorMountMT5208V2.FCStd  MotorMountMT5208V3.FCStd  MotorMountPD5060v1.fcstd  MotorMountPD5060v2.FCStd  MotorMountPD5060v3.FCStd  PlanetGear12_18.FCStd  PlanetGear12_18_Small.FCStd  PlanetGear12_18_SmallV2.FCStd  PlanetGear12_18_SmallV3.FCStd  PlanetGear12_18l_Large_V3.FCStd  SunGear.FCStd  SunGearV2.FCStd  SunGearV2_145mod.FCStd  TempSensorCover.FCStd
CAD/TestRigs/: GearBoxDrawing.fcstd  TestRig_DummyRingDrive3.fcstd  TestRig_bearing-housing.fcstd  TestRig_bearing-seat.fcstd
Electronics/: .gitignore  Notes
Electronics/MotorController2/: .gitignore  BMC2  BMC2-cache.lib  BMC2-rescue.lib  BMC2.bak  BMC2.csv  BMC2.kicad_pcb  BMC2.kicad_pcb-bak  BMC2.kicad_pcb.save  BMC2.net  BMC2.pro  BMC2.xml  BMC2_BOM.ods  BMC2_v1.csv  Controller.bak  IFX91041EJV33.bak  IFX91041EJV33.lib  MotorDRV.lib  QFP50P900X900X120-49N.mod  Regulator.sch  SON-8.mod  SON127P532X615X110-8N.mod  bsc016n06ns.bak  bsc016n06ns.bck  bsc016n06ns.dcm  bsc016n06ns.lib  drv8305.bak  drv8305.lib  fp-lib-table  power.bak  power.sch
Electronics/MotorController2/Local.pretty/: R_PSR400.kicad_mod  R_PSR400_SENSE.kicad_mod  SMT-HDR-10.kicad_mod  SON127P532X615X110-8N.kicad_mod
Electronics/MotorController2/plugins/: bom2grouped_csv.xsl
Scripts/: setup.sh
Software/: README.md
Software/DataRecorder/: CMakeLists.txt  postgres_and_grafana.md
Software/DataRecorder/config/: postgres.sql  sandpit.grafana.json
Software/DataRecorder/include/dogbot/: DataRecorder.hh
Software/DataRecorder/src/: CMakeLists.txt  DataRecorder.cc  dogbotDataRecorder.cc
Software/Gait/: CMakeLists.txt
Software/Gait/include/dogbot/: QuadrupedController.hh  SimpleQuadrupedController.hh  SplineCatmullRom.hh  SplineGaitController.hh
Software/Gait/src/: CMakeLists.txt  QuadrupedController.cc  SimpleQuadrupedController.cc  SplineCatmullRom.cc  SplineGaitController.cc  dogBotWalk.cc  testDogBotGait.cc
Software/ROS/: .gitignore  README.md
Software/ROS/dogbot_sim/urdf/: dogbot.xacro
Software/ROS/src/: DogBot-ROS.files  DogBot-ROS.includes
Software/ROS/src/dogbot_control/: CMakeLists.txt  notes  package.xml
Software/ROS/src/dogbot_control/config/: dogbot_controllers.yaml  testrig_controllers.yaml
Software/ROS/src/dogbot_control/controller/: joint_state_control.yaml  position_control.yaml
Software/ROS/src/dogbot_control/include/dogbot_control/: dogbot_hw_control_loop.h  dogbot_hw_interface.h  sim_hw_interface.h
Software/ROS/src/dogbot_control/launch/: controllers.launch  dogbot_hardware.launch  dogbot_simulation.launch  dogbot_test_trajectory.launch  dogbot_visualize.launch  testrig_hardware.launch
Software/ROS/src/dogbot_control/scripts/: keyboard_control.py
Software/ROS/src/dogbot_control/src/: dogbot_hw_control_loop.cpp  dogbot_hw_interface.cpp  dogbot_hw_main.cpp  sim_hw_interface.cpp  sim_hw_main.cpp
Software/ROS/src/dogbot_description/: CMakeLists.txt  package.xml
Software/ROS/src/dogbot_description/urdf/: dogbot.xacro
Software/ROS/src/dogbot_driver/: CMakeLists.txt  package.xml
Software/ROS/src/dogbot_driver/include/dogbot_driver/: ROSHardware.hh  ROSHardwareInterface.hh
Software/ROS/src/dogbot_driver/launch/: dogbot_driver.launch  driver.launch
Software/ROS/src/dogbot_driver/src/: ROSHardware.cc  ROSHardwareInterface.cc  dogbot_driver_node.cc
Software/ROS/src/dogbot_gazebo/: CMakeLists.txt  package.xml  readme.md
Software/ROS/src/dogbot_gazebo/bags/: demo1.bag
Software/ROS/src/dogbot_gazebo/launch/: dog.launch  gztest.launch
