<?xml version="1.0"?>
<package>
  <name>dogbot_control</name>
  <version>0.0.1</version>
  <description>Simple simulation interface and template for setting up a hardware interface for dogbot</description>

  <maintainer email="craftit@gmail.com">Charles Galambos</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>

  <author email="craftit@gmail.com">C</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>

  <export>
  </export>
</package>
